# dailyplan_test

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  prompt.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260412_0001_initial_migration.py  20260414_0002_add_goal_generation_status.py  4c0a725afdee_add_task_status.py
backend/app/: main.py
backend/app/agent/: __init__.py  llm_client.py  persistence.py  planner.py  prompts.py  schemas.py
backend/app/api/: __init__.py  agent.py  auth.py  daily_plans.py  health.py  tasks.py  weekly_goals.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  acceptance_criteria.py  daily_plan.py  daily_task.py  user.py  weekly_goal.py
backend/app/schemas/: __init__.py  daily_plan.py  progress.py  token.py  user.py  weekly_goal.py
deploy/: nginx.conf
docs/: deploy-guide.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/goals/: page.tsx
frontend/app/(dashboard)/plans/[goalId]/: page.tsx
frontend/app/(dashboard)/progress/: page.tsx
frontend/components/: providers.tsx
frontend/lib/: api.ts  auth.tsx  types.ts
scripts/: dev.sh
